# AllThatRemains

./: .gitignore  .gitmodules  CMakeLists.txt  conandata.yml  conanfile.py
AllThatRemains/: CMakeLists.txt
AllThatRemains/src/: main.cpp
FragmentEngine/: CMakeLists.txt
FragmentEngine/Core/: CMakeLists.txt
FragmentEngine/Core/include/: Engine.h
FragmentEngine/Core/src/: Engine.cpp  Engine.h
FragmentEngine/Log/: CMakeLists.txt
FragmentEngine/Log/include/: Log.h  LogInternal.h
FragmentEngine/Log/src/: Log.cpp
FragmentEngine/Renderer/: CMakeLists.txt
FragmentEngine/Renderer/include/: Camera.h  Descriptors.h  Images.h  Initializers.h  Loader.h  Pipelines.h  Renderer.h  ResourceManager.h  Types.h  VkRender.h
FragmentEngine/Renderer/shaders/: compile_shaders.ps1  compile_shaders.sh  fullscreen.vert  gradient.comp  input_structures.glsl  mesh.vert.spv  mesh_oit.frag  mesh_pbr.frag  mesh_pbr.frag.spv  oit_composite.frag  shader.vert  sky.comp.spv
FragmentEngine/Renderer/src/: Camera.cpp  Descriptors.cpp  Images.cpp  Initializers.cpp  Loader.cpp  Pipelines.cpp  Renderer.cpp  ResourceManager.cpp  VkRender.cpp
